--- a/d02-bfv.tex
+++ b/d02-bfv.tex
@@ -1852,7 +1852,7 @@ $ $
 
 
 
-\para{Source Code:} Examples of BFV's batch encoding and homomorphic input vector rotation can be executed by running \href{https://github.com/fhetextbook/fhe-textbook/blob/main/source%20code/bfv.py}{\underline{this Python script (BFV addition and rotation)}} and \href{https://github.com/fhetextbook/fhetextbook.github.io/blob/main/source%20code/bfv_rotation_only.py}{\underline{this one (BFV rotation only)}}. 
+\para{Source Code:} Examples of BFV's batch encoding and homomorphic input vector rotation can be executed by running \href{https://github.com/fhetextbook/fhe-textbook/blob/main/source%20code/bfv.py}{\underline{this Python script}} (BFV addition and rotation) and \href{https://github.com/fhetextbook/fhetextbook.github.io/blob/main/source%20code/bfv_rotation_only.py}{\underline{this one}} (BFV rotation only). 
 
 
 
